[tool.poetry]
name = "content_engine"
version = "0.1.0"
description = "Developer activity → automated content generator"
authors = ["Dhruv Thakur"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "*"
uvicorn = "*"
langgraph = "*"
openai = "*"
pydantic = "*"
python-dotenv = "*"
structlog = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"