[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content_engine"
version = "0.1.0"
description = "Developer activity → automated content generator"
authors = [{name = "Dhruv Thakur"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "structlog",
    "streamlit",
    "httpx",
    "langchain-openai>=1.1.11",
    "chromadb>=1.5.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "GitPython",
]
